--- a/app/src/main/res/layout/bh_content.xml
+++ b/app/src/main/res/layout/bh_content.xml
@@ -22,7 +22,21 @@
     <!--app:layout_constraintEnd_toEndOf="parent"-->
     <!--app:layout_constraintStart_toStartOf="parent"-->
     <!--app:layout_constraintTop_toTopOf="parent"/>-->
-
+    <TextView
+        android:id="@+id/no_reviews"
+        android:layout_width="197dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="No reviews added yet."
+        android:textSize="@dimen/text_size"
+        app:layout_constraintBottom_toBottomOf="@+id/rvResultsBH"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvResultsBH"
         android:layout_width="match_parent"
