--- a/app/src/main/res/layout/app_bar_index.xml
+++ b/app/src/main/res/layout/app_bar_index.xml
@@ -40,6 +40,10 @@
         android:id="@+id/bh_content"
         layout="@layout/bh_content"/>
 
+    <include
+        android:id="@+id/content_profile"
+        layout="@layout/content_profile"/>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
