--- a/app/src/main/res/layout/app_bar_index.xml
+++ b/app/src/main/res/layout/app_bar_index.xml
@@ -44,6 +44,9 @@
         android:id="@+id/content_profile"
         layout="@layout/content_profile"/>
 
+    <include android:id="@+id/content_notification"
+        layout="@layout/content_notification"/>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
