--- a/app/src/main/res/layout/layout_notification.xml
+++ b/app/src/main/res/layout/layout_notification.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageButton
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/ic_notifications_white_24dp"/>
+<RelativeLayout android:layout_height="fill_parent"
+    android:layout_width="48dp"
+    android:layout_gravity="right"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <ImageButton
+        android:id="@+id/ibNotif"
+        android:layout_width="43dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/ic_notifications_white_24dp" />
+
+    <TextView
+        android:id="@+id/counter"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="5dp"
+        android:background="@color/background_color"
+        android:textColor="#ffffff"
+        android:textSize="15sp" />
+</RelativeLayout>
